--- a/index.html
+++ b/index.html
@@ -89,19 +89,19 @@
         <h2>Shop for your home essentials</h2>
         <div class="images4">
             <div class="content">
-                <div class="underImg" style="background-image: url('/imges/cleaning-tools.jpg');"></div>
+                <div class="underImg" style="background-image: url('cleaning-tools.jpg');"></div>
                 <p>Cleaning Tools</p>
             </div>
             <div class="content">
-                <div class="underImg" style="background-image: url('/imges/home-storage.jpg');"></div>
+                <div class="underImg" style="background-image: url('home-storage.jpg');"></div>
                 <p>Home Storage</p>
             </div>
             <div class="content">
-                <div class="underImg" style="background-image: url('/imges/home-decor.jpg');"></div>
+                <div class="underImg" style="background-image: url('home-decor.jpg');"></div>
                 <p>Home Decor</p>
             </div>
             <div class="content">
-                <div class="underImg" style="background-image: url('/imges/bedding.jpg');"></div>
+                <div class="underImg" style="background-image: url('bedding.jpg');"></div>
                 <p>Bedding</p>
             </div>
         </div>
@@ -112,7 +112,7 @@
     <div class="box">
         <div class="box-content1">
             <h2>Get your game on</h2>
-            <div class="box-image" style="background-image: url('/imges/shop-gaming.jpg');"></div>
+            <div class="box-image" style="background-image: url('shop-gaming.jpg');"></div>
             <p>Shop gaming</p>
         </div>
     </div>
@@ -122,19 +122,19 @@
         <h2>Fashion trends you like</h2>
         <div class="images4">
             <div class="content">
-                <div class="underImg" style="background-image: url('/imges/Dresses.jpg');"></div>
+                <div class="underImg" style="background-image: url('Dresses.jpg');"></div>
                 <p>Dresses</p>
             </div>
             <div class="content">
-                <div class="underImg" style="background-image: url('/imges/Knits.jpg');"></div>
+                <div class="underImg" style="background-image: url('Knits.jpg');"></div>
                 <p>Knits</p>
             </div>
             <div class="content">
-                <div class="underImg" style="background-image: url('/imges/Jackets.jpg');"></div>
+                <div class="underImg" style="background-image: url('Jackets.jpg');"></div>
                 <p>Jackets</p>
             </div>
             <div class="content">
-                <div class="underImg" style="background-image: url('/imges/Jewelry.jpg');"></div>
+                <div class="underImg" style="background-image: url('Jewelry.jpg');"></div>
                 <p>Jewelry</p>
             </div>
         </div>
@@ -146,19 +146,19 @@
         <h2>Save big on school essentials</h2>
         <div class="images4">
             <div class="content">
-                <div class="underImg" style="background-image: url('/imges/Backpacks.png');"></div>
+                <div class="underImg" style="background-image: url('Backpacks.png');"></div>
                 <p>Backpacks</p>
             </div>
             <div class="content">
-                <div class="underImg" style="background-image: url('/imges/Electronics.png');"></div>
+                <div class="underImg" style="background-image: url('Electronics.png');"></div>
                 <p>Electronics</p>
             </div>
             <div class="content">
-                <div class="underImg" style="background-image: url('/imges/Stationary.jpg');"></div>
+                <div class="underImg" style="background-image: url('Stationary.jpg');"></div>
                 <p>Stationary</p>
             </div>
             <div class="content">
-                <div class="underImg" style="background-image: url('/imges/Fashion.jpg');"></div>
+                <div class="underImg" style="background-image: url('Fashion.jpg');"></div>
                 <p>Fashion</p>
             </div>
         </div>
@@ -169,19 +169,19 @@
         <h2>Refresh your space</h2>
         <div class="images4">
             <div class="content">
-                <div class="underImg" style="background-image: url('/imges/Dining.jpg');"></div>
+                <div class="underImg" style="background-image: url('Dining.jpg');"></div>
                 <p>Dining</p>
             </div>
             <div class="content">
-                <div class="underImg" style="background-image: url('/imges/Home.jpg');"></div>
+                <div class="underImg" style="background-image: url('Home.jpg');"></div>
                 <p>Home</p>
             </div>
             <div class="content">
-                <div class="underImg" style="background-image: url('/imges/Kitchen.jpg');"></div>
+                <div class="underImg" style="background-image: url('Kitchen.jpg');"></div>
                 <p>Kitchen</p>
             </div>
             <div class="content">
-                <div class="underImg" style="background-image: url('/imges/Healthy-and-Beauty.jpg');"></div>
+                <div class="underImg" style="background-image: url('Healthy-and-Beauty.jpg');"></div>
                 <p>Healthy and Beauty</p>
             </div>
         </div>
@@ -192,19 +192,19 @@
         <h2>Top categories in Kitchen appliances</h2>
         <div class="images4">
             <div class="content">
-                <div class="underImg" style="background-image: url('/imges/Cooker.jpg');"></div>
+                <div class="underImg" style="background-image: url('Cooker.jpg');"></div>
                 <p>Cooker</p>
             </div>
             <div class="content">
-                <div class="underImg" style="background-image: url('/imges/Coffe.jpg');"></div>
+                <div class="underImg" style="background-image: url('Coffe.jpg');"></div>
                 <p>Coffee</p>
             </div>
             <div class="content">
-                <div class="underImg" style="background-image: url('/imges/Postand.jpg');"></div>
+                <div class="underImg" style="background-image: url('Postand.jpg');"></div>
                 <p>Post and Pan</p>
             </div>
             <div class="content">
-                <div class="underImg" style="background-image: url('/imges/Kettles.jpg');"></div>
+                <div class="underImg" style="background-image: url('Kettles.jpg');"></div>
                 <p>Kettles</p>
             </div>
         </div>
@@ -214,7 +214,7 @@
     <div class="box">
         <div class="box-content1">
             <h2>Deals for every grade</h2>
-            <div class="box-image" style="background-image: url('/imges/Fuji_SingleI.jpg');"></div>
+            <div class="box-image" style="background-image: url('Fuji_SingleI.jpg');"></div>
             <p>See all deals</p>
         </div>
     </div>
@@ -224,19 +224,19 @@
         <h2>New home arrivals under $50</h2>
         <div class="images4">
             <div class="content">
-                <div class="underImg" style="background-image: url('/imges/Kitchen&Dining.jpg');"></div>
+                <div class="underImg" style="background-image: url('Kitchen&Dining.jpg');"></div>
                 <p>Kitchen & Dining</p>
             </div>
             <div class="content">
-                <div class="underImg" style="background-image: url('/imges/Home-improvements.jpg');"></div>
+                <div class="underImg" style="background-image: url('Home-improvements.jpg');"></div>
                 <p>Home Improvements</p>
             </div>
             <div class="content">
-                <div class="underImg" style="background-image: url('/imges/Decor.jpg');"></div>
+                <div class="underImg" style="background-image: url('Decor.jpg');"></div>
                 <p>Decor</p>
             </div>
             <div class="content">
-                <div class="underImg" style="background-image: url('/imges/Bedding&Bath.jpg');"></div>
+                <div class="underImg" style="background-image: url('Bedding&Bath.jpg');"></div>
                 <p>Bedding & Bath</p>
             </div>
         </div>
